# tcrtrifold-experiments

./: .gitignore  README.md  pyproject.toml
data/cresta/raw/: SuppTable1.csv  SuppTable1_raw.csv  cresta.csv  pHLAseqs.csv
data/iedb-vdjdb/: README.md  blast_query.sh  pdb_exclusions.ipynb  reformat.ipynb
data/iedb-vdjdb/fasta_queries/: class_II_triads.fasta
data/iedb_I/raw/: immrep_IEDB.csv
data/iedb_II/raw/: immrep_IEDB.csv
data/immrep/raw/: test.csv
data/pdb/: README.md  pdb_triads.csv  pdb_triads.parquet  reformat.ipynb  run_af3_triad.sh
data/pdb/raw/: humanI.tsv  humanII.tsv  mouseI.tsv  mouseII.tsv
data/tcrcube_panpeptide/: test_panpeptide.txt
envs/: af3-analyzer.yaml  blast.yaml  env.yaml  nf-core.yaml
figures/: feature_extraction.py  fig_1.ipynb  fig_3.ipynb
notebooks/fig_3/: a.cross_epitope.ipynb  b.within_epitope.ipynb
scripts/: 00_run_clean_raw_data.sh  nf-deps.sh  setup.sh
scripts/cresta/: 00_run_clean_raw_data.sh
scripts/iedb_I/: 00_run_clean_raw_data.sh  04_extract_feat.sh
scripts/iedb_II/: 00_run_clean_raw_data.sh
scripts/pdb/: 00_run_clean_raw_data.sh
src/tcrtrifold/: blast.py  cleaning.py  dataset.py  eval_utils.py  feat_extract.py  graph_utils.py  neg_creation.py  pdb.py  tcrdock_fmt.py  utils.py
workflows/: 00_clean_raw_data.cresta.nf  00_clean_raw_data.iedb_I.nf  00_clean_raw_data.iedb_II.nf  00_clean_raw_data.nf  00_clean_raw_data.pdb.nf  03_tcrdock.nf  04_extract_feat.iedb_I.thresh_1.1x_neg.nf  04_extract_feat.iedb_I.thresh_3.10x_neg.nf  04_recombine_feat.nf  modules.json  nextflow.config  tcrdock.nf
(+53 files in other folders)
