[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcrtrifold"
version = "0.1.0"
authors = [{ name="Your Name", email="you@example.com" }]
description = "Predicting TCR:antigen interactions using AF3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Repository" = "https://github.com/you/my_project"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.setuptools]
package-dir = {"" = "src"}